--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,12 @@
 #!/.zshrc
 
 # terminal-emulator
-#!/.config/alacritty
+!/.config
+/.config/*
+!/.config/alacritty
+!/.config/alacritty/*
+!/.config/kitty
+!/.config/kitty/*
 
 # term-multiplexer
 # from https://github.com/gpakosz/.tmux
