--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,9 +7,9 @@
 #: characters.
 
 font_family      Menlo
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+bold_font        Menlo
+italic_font      Menlo
+bold_italic_font Menlo
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
@@ -838,4 +838,5 @@ map cmd+b send_text all :call LanguageClient#textDocument_definition()\x0d
 map cmd+1 send_text all :call Pocki_FocusFileTree()\x0d
 map cmd+shift+o send_text all :Files\x0d
 map cmd+w send_text all :Kwbd\x0d
+map cmd+/ send_text all :call NERDComment("x", "Invert")\x0d
 
