--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -838,5 +838,5 @@ map cmd+b send_text all :call LanguageClient#textDocument_definition()\x0d
 map cmd+1 send_text all :call Pocki_FocusFileTree()\x0d
 map cmd+shift+o send_text all :Files\x0d
 map cmd+w send_text all :Kwbd\x0d
-map cmd+/ send_text all :call NERDComment("x", "Invert")\x0d
+map cmd+/ send_text all :call NERDComment("n", "Invert")\x0d
 
