--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,9 @@
 registry=https://registry.npm.taobao.org/
+disturl=https://npm.taobao.org/dist
+sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
 puppeteer_download_host=https://storage.googleapis.com.cnpmjs.org
+phantomjs_cdnurl=https://npm.taobao.org/mirrors/phantomjs
+electron_mirror=https://npm.taobao.org/mirrors/electron/
+node_sqlite3_binary_host_mirror=http://npm.taobao.org/mirrors
+canvas_binary_host_mirror=https://cnpmjs.org/mirrors/node-canvas-prebuilt/
+chromedriver_cdnurl=https://npm.taobao.org/mirrors/chromedriver
