--- a/.pip/pip.conf
+++ b/.pip/pip.conf
@@ -1,3 +1,7 @@
 [global]
- trusted-host =  mirrors.aliyun.com
- index-url = https://mirrors.aliyun.com/pypi/simple
+
+index-url = https://mirrors.aliyun.com/pypi/simple
+
+[install]
+
+trusted-host = mirrors.aliyun.com
